--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
+    background-image: url('../assets/brainhack2.png');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -329,32 +329,6 @@ footer {
         padding: 100px 0;
     }
 
-}
-
-.form-control {
-    display: block;
-    width: 100%;
-    height: 35px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #eee;
-    background-color: #36333d;
-    background-image: none;
-    border: 1px solid #36333d;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-.form-control:focus {
-    color: #222;
-    background-color: #ccc;
-    box-shadow: none;
-}
-
-textarea {
-    resize: none;
 }
 
 .margin-top-0 {
