--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ http://www.bootstrapzero.com
 */
 
 @import url(https://fonts.googleapis.com/css?family=Questrial);
-@import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
+@import url(https://fonts.googleapis.com/css?family=Amarante);
 
 html,
 body {
@@ -81,7 +81,7 @@ p {
 }
 
 .cursive {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Amarante', cursive;
     text-transform: none;
 }
 
