--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('../assets/brainhack2.png');
+    background-image: url('../assets/background.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
